[package]
name = "clutch"
version = "0.1.0"
authors = ["landon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# MongoDB
mongodb = { package = "mongodb_cwal", version = "0.6.2" }
bson = "0.14.0"

# Serde
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"

# Sys
bitflags = "1.2.1"
ron = "0.5.1"